--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -214,19 +214,9 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <include
         android:id="@+id/layoutProgress"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/custom_orange_a040"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="gone">
+        layout="@layout/layout_progress"
+        android:visibility="gone" />
 
-        <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:indeterminate="true" />
-
-    </LinearLayout>
 </FrameLayout>
