--- a/app/src/main/res/layout/item_contact_add.xml
+++ b/app/src/main/res/layout/item_contact_add.xml
@@ -74,4 +74,11 @@
 
     </LinearLayout>
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/imageAdded"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_added"
+        android:visibility="gone" />
+
 </LinearLayout>
