--- a/app/src/main/res/layout/fragment_sign_up_extended.xml
+++ b/app/src/main/res/layout/fragment_sign_up_extended.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.signupextended.SignUpExtendedFragment">
+    tools:context=".ui.screens.signupextended.SignUpExtendedFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
