--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -133,7 +133,7 @@
                 android:id="@+id/buttonGoogle"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                tools:composableName="com.dumchykov.socialnetworkdemo.ui.signup.SignUpFragmentKt.ButtonGoogle" />
+                tools:composableName="com.dumchykov.socialnetworkdemo.ui.screens.signup.ButtonGoogleKt.ButtonGoogle" />
 
             <Space
                 android:layout_width="wrap_content"
